# awto-riden

./: .gitignore  .gitmodules  ARCHITECTURE.md  ATTRIBUTION.md  BLE_ROADMAP.md  BT_STATUS.md  COMMERCIAL.md  README.md  USB_TESTING.md  awto_riden.py  mcp_server.py  protocol.py  pyproject.toml  register_map.py  riden_client.py  riden_daemon.py  riden_flash.py  riden_register.py  riden_server.py  riden_transport.py  test_harness.py  ttu_cli.py
.claude/: settings.json
.github/: copilot-instructions.md
docs/: BLE_ROADMAP.md  BT_STATUS.md  REGENERATING.md  USB_TESTING.md  connected_load_timing_matrix_comprehensive.json  connected_load_timing_matrix_quick.json  mr11_sine_test.html  mr11_sine_test.md  registers.md  timing_test_set_summary.md
docs/data/: mr11_fastest_errors.json  register_scan_20260503-011913Z.json  serial_timing_profile.json
mcp/: mcp_restart.sh  mcp_server.py
parked/: README.md  riden_client.py  riden_server.py
scripts/: awto-riden-dev.py  awto-riden-test.py  awto_riden_ble_discover.py  awto_riden_ble_globe.py  awto_riden_ble_profile.py  awto_riden_mr11.py  awto_riden_plot_ble.py  awto_riden_plot_serial.py  awto_riden_raw_read.py  awto_riden_regen.py  awto_riden_report.py  awto_riden_safe_waveform.py  awto_riden_timing.py  awto_riden_timing_matrix.py  awto_riden_waveform_capture.py  backfill_reports_from_docs.py  build_sigrok_stack.sh  connected_load_timing_matrix.py  output_test.py  plot_serial_comparison.py  plot_waveforms.py  regen_waveforms.py  regenerate_timing_artifacts.sh  report_pages.py  timing_test_set.py  waveform_capture.py
(+46 files in other folders)
