[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awto-mcp-riden"
version = "0.1.0"
description = "MCP server for Riden RD60xx power supplies — Modbus RTU over USB/BT serial"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dan", email = "dan@awto.au" },
    { name = "GitHub Copilot (Claude Sonnet 4.6)", role = "implementation" },
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "pyserial>=3.5",
    "bleak>=0.22",
    "colorlog>=6.8",
    "rich-argparse>=1.4",
    "psutil>=5.9",
]

[project.scripts]
awto-riden = "awto_riden:main"
# awto-riden-mcp: parked (see issue #7 / mcp/). The MCP server lives at
# mcp/mcp_server.py and is run directly (python3 mcp/mcp_server.py), not as a
# console script — a "mcp.mcp_server" entry point would collide with the PyPI
# `mcp` package it imports. Restore this line if MCP returns to the active path.

[tool.uv]
python = "3.14t"

[tool.hatch.build.targets.wheel]
packages = ["."]
